@@ -141,7 +141,9 @@ https://github.com/networkupstools/nut/milestone/11
 NOTE: Currently both the long and short names for `libupsclient` should be
 installed.
    * newly added support to scan several IP addresses (single or ranges)
-     with the same call, by repeating command-line options. [#2244]
+     with the same call, by repeating command-line options; also `-m auto`
+     can be specified (once) to select IP address ranges of configured
+     local network interfaces. [#2244]
    * bumped version of `libnutscan` to 2.5.2, it now includes a few more
      methods and symbols from `libcommon`. [#2244]
 
